--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "https://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
-<html xmlns="https://www.w3.org/1999/xhtml">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
 <title>TestNG Report</title>
@@ -8,10 +8,10 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">Suite</th></tr>
-<tr><td><a href="#t0">Test</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">5,792</td><td></td><td></td></tr>
+<tr><th colspan="7">Suite</th></tr>
+<tr><td><a href="#t0">Test</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">7,413</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">api.test.UserTests</td><td><a href="#m0">testUpdateUserByName</a></td><td rowspan="1">1734380858743</td><td rowspan="1">37</td></tr><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="3">api.test.UserTests</td><td><a href="#m1">testDeleteUserByName</a></td><td rowspan="1">1734380858784</td><td rowspan="1">1427</td></tr><tr class="passedeven"><td><a href="#m2">testGetuserByName</a></td><td rowspan="1">1734380857538</td><td rowspan="1">1202</td></tr><tr class="passedeven"><td><a href="#m3">testPostUser</a></td><td rowspan="1">1734380855088</td><td rowspan="1">2444</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">api.test.UserTests</td><td><a href="#m0">testUpdateUserByName</a></td><td rowspan="1">1734428512470</td><td rowspan="1">26</td></tr><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="3">api.test.UserTests</td><td><a href="#m1">testDeleteUserByName</a></td><td rowspan="1">1734428512499</td><td rowspan="1">1284</td></tr><tr class="passedeven"><td><a href="#m2">testGetuserByName</a></td><td rowspan="1">1734428509572</td><td rowspan="1">2894</td></tr><tr class="passedeven"><td><a href="#m3">testPostUser</a></td><td rowspan="1">1734428506978</td><td rowspan="1">2587</td></tr></tbody>
 </table>
 <h2>Test</h2><h3 id="m0">api.test.UserTests#testUpdateUserByName</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.IllegalArgumentException: Invalid number of path parameters. Expected 1, was 0. Undefined path parameters are: username.
 	at org.codehaus.groovy.runtime.callsite.ConstructorSite$ConstructorSiteNoUnwrap.callConstructor(ConstructorSite.java:86)
