--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,14 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="ee998b">  <td>24/12/17 01:57:37</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserTests.testGetuserByName()[pri:2, instance:api.test.UserTests@564fabc8]">testGetuserByName</td> 
-  <td>main@498931366</td>   <td></td> </tr>
-<tr bgcolor="ee998b">  <td>24/12/17 01:57:38</td>   <td>1205</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserTests.testUpdateUserByName()[pri:3, instance:api.test.UserTests@564fabc8]">testUpdateUserByName</td> 
-  <td>main@498931366</td>   <td></td> </tr>
-<tr bgcolor="ee998b">  <td>24/12/17 01:57:34</td>   <td>-2949</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;UserTests.setupData()[pri:0, instance:api.test.UserTests@564fabc8]">&gt;&gt;setupData</td> 
+<tr bgcolor="b0b186">  <td>24/12/17 15:11:46</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;UserTests.setupData()[pri:0, instance:api.test.UserTests@1725dc0f]">&gt;&gt;setupData</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@498931366</td>   <td></td> </tr>
-<tr bgcolor="ee998b">  <td>24/12/17 01:57:35</td>   <td>-2450</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserTests.testPostUser()[pri:1, instance:api.test.UserTests@564fabc8]">testPostUser</td> 
+<tr bgcolor="b0b186">  <td>24/12/17 15:11:46</td>   <td>430</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserTests.testPostUser()[pri:1, instance:api.test.UserTests@1725dc0f]">testPostUser</td> 
   <td>main@498931366</td>   <td></td> </tr>
-<tr bgcolor="ee998b">  <td>24/12/17 01:57:38</td>   <td>1246</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserTests.testDeleteUserByName()[pri:4, instance:api.test.UserTests@564fabc8]">testDeleteUserByName</td> 
+<tr bgcolor="b0b186">  <td>24/12/17 15:11:49</td>   <td>3024</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserTests.testGetuserByName()[pri:2, instance:api.test.UserTests@1725dc0f]">testGetuserByName</td> 
+  <td>main@498931366</td>   <td></td> </tr>
+<tr bgcolor="b0b186">  <td>24/12/17 15:11:52</td>   <td>5922</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserTests.testUpdateUserByName()[pri:3, instance:api.test.UserTests@1725dc0f]">testUpdateUserByName</td> 
+  <td>main@498931366</td>   <td></td> </tr>
+<tr bgcolor="b0b186">  <td>24/12/17 15:11:52</td>   <td>5951</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserTests.testDeleteUserByName()[pri:4, instance:api.test.UserTests@1725dc0f]">testDeleteUserByName</td> 
   <td>main@498931366</td>   <td></td> </tr>
 </table>
