--- a/reports/Test-report_18_12_2024_04_20_00_pm.html
+++ b/reports/Test-report_18_12_2024_04_20_00_pm.html
@@ -11,7 +11,7 @@
 <link href="https://cdn.jsdelivr.net/gh/extent-framework/extent-github-cdn@d6562a79075e061305ccfdb82f01e5e195e2d307/spark/css/spark-style.css" rel="stylesheet" />
 <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 <script src="https://cdn.jsdelivr.net/gh/extent-framework/extent-github-cdn@7cc78ce/spark/js/jsontree.js"></script>
-<style type="text/css"></style></head><body class="spa -report standard">
+<style type="text/css"></style></head><body class="spa -report dark">
   <div class="app">
     <div class="layout">
 <div class="header navbar">
@@ -35,7 +35,7 @@
 <a href="#"><span class="badge badge-primary">Pet Store API</span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">Dec 17, 2024 01:57:34 am</span></a>
+<a href="#"><span class="badge badge-primary">Dec 18, 2024 04:20:00 pm</span></a>
 </li>
 </ul>
 </div>
@@ -82,7 +82,7 @@
           <div class="test-detail">
             <p class="name">testPostUser</p>
             <p class="text-sm">
-              <span>1:57:37 am</span> / <span>00:00:00:002</span>
+              <span>4:20:07 pm</span> / <span>00:00:00:003</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -91,9 +91,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">testPostUser</h5>
-<span class='badge badge-success'>12.17.2024 1:57:37 am</span>
-<span class='badge badge-danger'>12.17.2024 1:57:37 am</span>
-<span class='badge badge-default'>00:00:00:002</span>
+<span class='badge badge-success'>12.18.2024 4:20:07 pm</span>
+<span class='badge badge-danger'>12.18.2024 4:20:07 pm</span>
+<span class='badge badge-default'>00:00:00:003</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=1</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
@@ -105,7 +105,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>1:57:37 am</td>
+        <td>4:20:07 pm</td>
         <td>
           Test Passed
         </td>
@@ -141,7 +141,7 @@
           <div class="test-detail">
             <p class="name">testGetuserByName</p>
             <p class="text-sm">
-              <span>1:57:38 am</span> / <span>00:00:00:000</span>
+              <span>4:20:09 pm</span> / <span>00:00:00:000</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -150,8 +150,8 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">testGetuserByName</h5>
-<span class='badge badge-success'>12.17.2024 1:57:38 am</span>
-<span class='badge badge-danger'>12.17.2024 1:57:38 am</span>
+<span class='badge badge-success'>12.18.2024 4:20:09 pm</span>
+<span class='badge badge-danger'>12.18.2024 4:20:09 pm</span>
 <span class='badge badge-default'>00:00:00:000</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=3</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
@@ -164,7 +164,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>1:57:38 am</td>
+        <td>4:20:09 pm</td>
         <td>
           Test Passed
         </td>
@@ -200,7 +200,7 @@
           <div class="test-detail">
             <p class="name">testUpdateUserByName</p>
             <p class="text-sm">
-              <span>1:57:38 am</span> / <span>00:00:00:001</span>
+              <span>4:20:09 pm</span> / <span>00:00:00:001</span>
               <span class="badge fail-bg log float-right">Fail</span>
             </p>
           </div>
@@ -209,8 +209,8 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-fail">testUpdateUserByName</h5>
-<span class='badge badge-success'>12.17.2024 1:57:38 am</span>
-<span class='badge badge-danger'>12.17.2024 1:57:38 am</span>
+<span class='badge badge-success'>12.18.2024 4:20:09 pm</span>
+<span class='badge badge-danger'>12.18.2024 4:20:09 pm</span>
 <span class='badge badge-default'>00:00:00:001</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=5</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
@@ -223,14 +223,14 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log fail-bg">Fail</span></td>
-        <td>1:57:38 am</td>
+        <td>4:20:09 pm</td>
         <td>
           Test Failed
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log fail-bg">Fail</span></td>
-        <td>1:57:38 am</td>
+        <td>4:20:09 pm</td>
         <td>
           Invalid number of path parameters. Expected 1, was 0. Undefined path parameters are: username.
         </td>
@@ -266,7 +266,7 @@
           <div class="test-detail">
             <p class="name">testDeleteUserByName</p>
             <p class="text-sm">
-              <span>1:57:40 am</span> / <span>00:00:00:000</span>
+              <span>4:20:11 pm</span> / <span>00:00:00:000</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -275,8 +275,8 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">testDeleteUserByName</h5>
-<span class='badge badge-success'>12.17.2024 1:57:40 am</span>
-<span class='badge badge-danger'>12.17.2024 1:57:40 am</span>
+<span class='badge badge-success'>12.18.2024 4:20:11 pm</span>
+<span class='badge badge-danger'>12.18.2024 4:20:11 pm</span>
 <span class='badge badge-default'>00:00:00:000</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=7</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
@@ -289,7 +289,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>1:57:40 am</td>
+        <td>4:20:11 pm</td>
         <td>
           Test Passed
         </td>
@@ -332,13 +332,13 @@
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>Dec 17, 2024 01:57:34 am</h3>
+<h3>Dec 18, 2024 04:20:00 pm</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>Dec 17, 2024 01:57:40 am</h3>
+<h3>Dec 18, 2024 04:20:11 pm</h3>
 </div></div>
 </div>
 <div class="col-md-3">
@@ -428,7 +428,7 @@
 </div></div>
 <script>
 var timeline = {
-"testPostUser":0.002,"testGetuserByName":0,"testUpdateUserByName":0.001,"testDeleteUserByName":0
+"testPostUser":0.003,"testGetuserByName":0,"testUpdateUserByName":0.001,"testDeleteUserByName":0
 };
 </script>
 <div class="row">
