--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,14 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b0b186">  <td>24/12/17 15:11:46</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;UserTests.setupData()[pri:0, instance:api.test.UserTests@1725dc0f]">&gt;&gt;setupData</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@498931366</td>   <td></td> </tr>
-<tr bgcolor="b0b186">  <td>24/12/17 15:11:52</td>   <td>5951</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserTests.testDeleteUserByName()[pri:4, instance:api.test.UserTests@1725dc0f]">testDeleteUserByName</td> 
-  <td>main@498931366</td>   <td></td> </tr>
-<tr bgcolor="b0b186">  <td>24/12/17 15:11:49</td>   <td>3024</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserTests.testGetuserByName()[pri:2, instance:api.test.UserTests@1725dc0f]">testGetuserByName</td> 
-  <td>main@498931366</td>   <td></td> </tr>
-<tr bgcolor="b0b186">  <td>24/12/17 15:11:46</td>   <td>430</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserTests.testPostUser()[pri:1, instance:api.test.UserTests@1725dc0f]">testPostUser</td> 
-  <td>main@498931366</td>   <td></td> </tr>
-<tr bgcolor="b0b186">  <td>24/12/17 15:11:52</td>   <td>5922</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserTests.testUpdateUserByName()[pri:3, instance:api.test.UserTests@1725dc0f]">testUpdateUserByName</td> 
-  <td>main@498931366</td>   <td></td> </tr>
+<tr bgcolor="f7cd89">  <td>24/12/18 02:21:09</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DDTests.testDeleteUserByName(java.lang.String)[pri:2, instance:api.test.DDTests@26275bef]">testDeleteUserByName</td> 
+  <td>main@1237740254</td>   <td></td> </tr>
+<tr bgcolor="f7cd89">  <td>24/12/18 02:21:09</td>   <td>16</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DDTests.testDeleteUserByName(java.lang.String)[pri:2, instance:api.test.DDTests@26275bef]">testDeleteUserByName</td> 
+  <td>main@1237740254</td>   <td></td> </tr>
+<tr bgcolor="f7cd89">  <td>24/12/18 02:21:09</td>   <td>24</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DDTests.testDeleteUserByName(java.lang.String)[pri:2, instance:api.test.DDTests@26275bef]">testDeleteUserByName</td> 
+  <td>main@1237740254</td>   <td></td> </tr>
+<tr bgcolor="f7cd89">  <td>24/12/18 02:21:00</td>   <td>-8239</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DDTests.testPostUser(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:1, instance:api.test.DDTests@26275bef]">testPostUser</td> 
+  <td>main@1237740254</td>   <td></td> </tr>
+<tr bgcolor="f7cd89">  <td>24/12/18 02:21:06</td>   <td>-3120</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DDTests.testPostUser(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:1, instance:api.test.DDTests@26275bef]">testPostUser</td> 
+  <td>main@1237740254</td>   <td></td> </tr>
+<tr bgcolor="f7cd89">  <td>24/12/18 02:21:07</td>   <td>-1775</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DDTests.testPostUser(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:1, instance:api.test.DDTests@26275bef]">testPostUser</td> 
+  <td>main@1237740254</td>   <td></td> </tr>
 </table>
